# LD38

./: CMakeLists.txt  README.md  TODO.todo  emscripten_build.sh
src/: MyGame.h  MyGame.inl  incl.h
src/entities/: CWorldBodyData.h  Player.h  Player.inl  Projectile.h  World.h  World.inl  WorldSystem.h
